package com.ruref.application.model;

public enum AccessType {
SUPER,
NORMAL
}
