package com.ruref.application.model;

public class UserModel {
    private String email;
    private String name;
    private String password;
    private AccessType access;

}
