package org.ruref.application;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class RurefApplication {

	public static void main(String[] args) {
		SpringApplication.run(RurefApplication.class, args);
	}

}
